grid square issue resolved with deleting z-index. now working on not duplicating pieces.

--- a/src/components/Scheduler-Grid-Square/SchedulerGridSquare.scss
+++ b/src/components/Scheduler-Grid-Square/SchedulerGridSquare.scss
@@ -5,6 +5,5 @@
   text-align: center;
   vertical-align: center;
   position: relative;
-  z-index: 0;
   background: transparent;
 }
